fix(ios fonts): fix button ios fonts & underline

--- a/src/pages/Registration/Registration.scss
+++ b/src/pages/Registration/Registration.scss
@@ -145,6 +145,7 @@
 		}
 
 		&_terms-of-use-link {
+			text-decoration: none;
 			color: #3fe911;
 			font-size: 11px;
 			cursor: pointer;
